--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
   
   <div class="card">
     <h1 class="title">
-      <span class="name">Emanuelly Alves Brandão</span>,<br>
+      <span class="name">Emanuelly Alves Brandao</span>,<br>
       você aceita ir jantar comigo no dia 15? 
       <i class="fas fa-utensils"></i>
     </h1>
